[package]
name = "laze"
version = "0.1.38"
authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]
edition = "2021"

description = "A declarative build system for C projects aiming to be simple, fast and correct"
repository = "https://github.com/kaspar030/laze"
homepage = "https://laze-build.org"
license = "Apache-2.0"
readme = "README.md"
include = [
  "src/**/*",
  "LICENSE",
  "README.md",
  "CHANGELOG.md",
  "!**/tests/**/*",
  "assets/**/*",
]
rust-version = "1.82"

[dependencies]
anyhow = "1.0.100"
bincode = "1.3.3"
clap = { version = "4.5.54", features = ["cargo", "env", "unstable-ext"] }
derive_builder = "0.20.2"
indexmap = { version = "2.13.0", features = ["serde"] }
itertools = "0.14.0"
pathdiff = { version = "0.2.3", features = ["camino"] }
rayon = "1.11.0"
serde = "1.0.228"
serde_derive = "1.0.219"
serde_yaml = "0.9.34"
treestate = "0.1.1"
im = { version = "15.1.0", features = ["rayon", "serde"] }
signal-hook = "0.4.1"
mimalloc = { version = "0.1.48", default-features = false }
build_uuid = "0.3.1"
solvent = { version = "0.8.3", features = ["deterministic"] }
rust-embed = "8.11.0"
task_partitioner = "0.1.1"

clap_complete = { version = "4.5.65", features = ["unstable-dynamic"] }
clap_mangen = "0.2.31"
camino = { version = "1.1.12", features = ["serde1"] }
evalexpr = "11.3.1"
semver = { version = "1.0.27", features = ["serde"] }
tinytemplate = "1.2.1"
serde_json = { version = "1.0.149", features = ["indexmap"] }
git-cache = "0.2.6"
shellexpand = "3.1.1"
thiserror = "2.0.18"
im-rc = "15.1.0"
shell-words = "1.1.1"
subst = "0.3.8"
path-slash = "0.2.1"
jobslot = "0.2.23"

[profile.release]
lto = "fat"
incremental = false
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3.24.0"

[package.metadata.release]
sign-commit = true
sign-tag = true
tag-name = "{{prefix}}{{version}}"

pre-release-replacements = [
  { file = "CHANGELOG.md", search = "\\(#(\\d+)\\)", replace = "([#$1](https://github.com/kaspar030/laze/pull/$1))", min = 0 },
  { file = "CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
  { file = "CHANGELOG.md", search = "\\.\\.\\.HEAD", replace = "...{{tag_name}}", exactly = 1 },
  { file = "CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}" },
  { file = "CHANGELOG.md", search = "<!-- next-header -->", replace = "<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly = 1 },
  { file = "CHANGELOG.md", search = "<!-- next-url -->", replace = "<!-- next-url -->\n[Unreleased]: https://github.com/kaspar030/laze/compare/{{tag_name}}...HEAD", exactly = 1 },
]
